--- a/src/style.css
+++ b/src/style.css
@@ -3,10 +3,21 @@
 @media (max-width: 767px) {
     /* GLOBAL */
 
+    .App {
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+    }
+
+    .content {
+        flex: 1;
+    }
+
     /* HEADER */
 
     #logo {
         width: 50px;
+        height: auto;
     }
 
     #header button {
@@ -31,6 +42,7 @@
 
     .cardImg {
         width: 50px;
+        height: auto;
     }
 
     .card {
@@ -74,5 +86,14 @@
     }
 
     /* FOOTER */
+
+    .socials h3 {
+        margin-bottom: 0;
+    }
+
+    .socials img {
+        width: 40px;
+        height: auto;
+    }
 }
 
