--- a/src/style.css
+++ b/src/style.css
@@ -39,25 +39,45 @@
     object-fit: cover;
 }
 
-#cardContainer {
-    gap: 2rem;
-    padding: 1rem 10rem;
+.homeCardContainer {
+    justify-content: center;
+    margin-top: 2rem;
+    margin-left: 4rem;
+    margin-right: 4rem;
+    gap: 3rem;
+    flex-wrap: wrap;
 }
 
 .cardImg {
-    width: 50px;
+    width: 100px;
     height: auto;
 }
 
 .card {
     align-items: center;
-    padding: 0.5rem;
+    padding: 1.5rem;  
+    flex: 1; 
+    border: 2px solid black;     
 }
 
-#cardContainer a {
-    flex: 1;
+.card-text a {
     text-decoration: none;
     color: black;
+}
+
+.card-text {
+    padding: 0;
+    font-size: 2rem;
+}
+
+.card-text:hover {
+    border-bottom: 2px solid black;
+}
+
+.card-body {
+    padding: 0;
+    padding-top: 0.5rem;
+    text-align: center;
 }
 
 /* SQUAD PAGE */
@@ -152,9 +172,13 @@
         object-fit: cover;
     }
 
-    #cardContainer {
+    .homeCardContainer {
+        justify-content: center;
+        margin-top: 0.5rem;
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
         gap: 0.5rem;
-        padding: 1rem;
+        flex-wrap: wrap;
     }
 
     .cardImg {
@@ -164,13 +188,25 @@
 
     .card {
         align-items: center;
-        padding: 0.5rem;
+        padding: 0.5rem;  
+        flex: 1;  
+        border: 0.5px solid black;    
     }
 
-    #cardContainer a {
-        flex: 1;
+    .card-text a {
         text-decoration: none;
         color: black;
+    }
+
+    .card-text {
+        padding: 0;
+        font-size: 1rem;
+    }
+
+    .card-body {
+        padding: 0;
+        padding-top: 0.5rem;
+        text-align: center;
     }
 
     /* SQUAD PAGE */
